--- a/pkg/qfa/DESCRIPTION
+++ b/pkg/qfa/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: qfa
-Version: 0.0-22
+Version: 0.0-23
 Date: 2014-08-05
 Title: Tools for modelling the growth dynamics of arrays of large numbers of colonies and performing quantitative fitness analysis (QFA).
 Author: Conor Lawless <conor.lawless@ncl.ac.uk>, with contributions from Alexander Young <alextisyoung@gmail.com> and Darren Wilkinson <d.j.wilkinson@ncl.ac.uk>
@@ -7,7 +7,8 @@ Maintainer: Conor Lawless <conor.lawless@ncl.ac.uk>
 Depends: 
 	R (>= 2.10.1),
 	sp, 
-	DEoptim
+	DEoptim,
+	parallel
 Imports:
 	knitr
 Suggests:
