CRAN compatibility and changes to allow setting the qfa.fit argument inocguess=NULL to allow estimation of inoculum density AND inoculum time from the first photograph of a culture with a detectable signal.
git-svn-id: svn://svn.r-forge.r-project.org/svnroot/qfa@609 edb9625f-4e0d-4859-8d74-9fd3b1da38cb

--- a/pkg/qfa/DESCRIPTION
+++ b/pkg/qfa/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: qfa
-Version: 0.0-24
-Date: 2014-09-18
-Title: Tools for modelling the growth dynamics of arrays of large numbers of colonies and performing quantitative fitness analysis (QFA).
+Version: 0.0-25
+Date: 2014-09-19
+Title: Tools for Quantitative Fitness Analysis (QFA) of Arrayed Microbial Cultures Growing on Solid Agar Surfaces
 Author: Conor Lawless <conor.lawless@ncl.ac.uk>, with contributions from Alexander Young <alextisyoung@gmail.com> and Darren Wilkinson <d.j.wilkinson@ncl.ac.uk>
 Maintainer: Conor Lawless <conor.lawless@ncl.ac.uk>
 Depends: 
@@ -11,7 +11,7 @@ Depends:
 	parallel
 Imports:
 	knitr
-Suggests:
+Enhances:
 	data.table
 Description: Quantitative Fitness Analysis (QFA) is a complementary series of experimental and computational methods for estimating the fitness of thousands of microbial cultures in parallel.  QFA is suitable for focussed, high-quality studies of the effect of genetic mutations or drug interventions on growth in model microbial organisms such as brewer's yeast.  Culture growth is observed by time-lapse photography of solid agar plates inoculated with cultures in rectangular arrays.  Growth curves are constructed by analysing image series using Colonyzer image analysis software  (http://research.ncl.ac.uk/colonyzer) which converts images to arrays of cell density estimates.  This R package is for a) fitting the generalised logistic model to potentially thousands of parallel growth curves, b) using inferred parameter values to calculate fitnesses for each culture and c) comparing fitnesses between QFA experiments with different genetic backgrounds or treatments to deduce interaction strengths.  This package facilitates quantifying the fitness of thousands of independent microbial strains and tracking them throughout growth curve experiments.  With appropriately designed experiments, qfa can also estimate genetic interaction strengths and produce epistasis plots.
 License: Artistic-2.0
